fixed  material_panel wrapping border

--- a/css/material_theme.less
+++ b/css/material_theme.less
@@ -1319,7 +1319,7 @@ h1, h2, h3, h4, h5, h6{
 /***********************Panels***********************/
 
 .material_panel{
-	border-radius: 0;
+	border: 0;
 	
 	.material_panel_heading{
 		font-weight: 400
